회원 권한 추가 및 회원 조회시 권한 확인 추가